perubahan bla bla bla

--- a/company profile/index.html
+++ b/company profile/index.html
@@ -6,11 +6,15 @@
     <title>Portofolio</title>
 </head>
 <body>
+    <header>Selamat datang</header>
+
     <h1>PT Sugino Worso</h1>
 
     <div>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate nemo tempore totam quo inventore aliquam id adipisci quasi exercitationem, aspernatur dicta possimus, sed deleniti, odio alias optio quod delectus magni?</div>
 
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate optio saepe nobis reprehenderit voluptatem sint deserunt pariatur asperiores illum est.</p>    
-    <a href=""></a>
+    <a href="https://youtube.com/shorts/APnXTj5FB6Q?si=OAoyJpFj9ek-uIb9"></a>
+
+    <footer> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto, vitae.</footer>
 </body>
 </html>
