--- a/company profile/contact-us.html
+++ b/company profile/contact-us.html
@@ -13,7 +13,7 @@
     <div>ini bagian contact</div>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate optio saepe nobis reprehenderit voluptatem sint deserunt pariatur asperiores illum est.</p>    
     <a href="https://youtube.com/shorts/APnXTj5FB6Q?si=OAoyJpFj9ek-uIb9"></a>
-
+    <div>contoh perubahan baris 16</div>
     <footer> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto, vitae.</footer>
 </body>
 </html>
