--- a/company profile/contact-us.html
+++ b/company profile/contact-us.html
@@ -15,5 +15,6 @@
     <a href="https://youtube.com/shorts/APnXTj5FB6Q?si=OAoyJpFj9ek-uIb9"></a>
     <form action=""></form>
     <footer> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto, vitae.</footer>
+    <div>Lorem, ipsum dolor.</div>
 </body>
 </html>
